private-cloud.yaml
##################################################################################################
# Details service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: details
  labels:
    app: details
    service: details
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: details
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: details-v1
  labels:
    app: details
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: details
        version: v1
    spec:
      serviceAccountName: bookinfo-details
      containers:
      - name: details
        image: quay.io/maistra/examples-bookinfo-details-v1:2.3.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
      securityContext:
        # Do not use SeccompProfile if your project must work on
        # old k8s versions < 1.19 and Openshift < 4.11
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
---
##################################################################################################
# Reviews service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: reviews
  labels:
    app: reviews
    service: reviews
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: reviews
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-v1
  labels:
    app: reviews
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: reviews
        version: v1
    spec:
      securityContext:
        # Do not use SeccompProfile if your project must work on
        # old k8s versions < 1.19 and Openshift < 4.11
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
      serviceAccountName: bookinfo-reviews
      containers:
      - name: reviews
        image: quay.io/maistra/examples-bookinfo-reviews-v1:2.3.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: wlp-output
          mountPath: /opt/ibm/wlp/output
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
      volumes:
      - name: wlp-output
        emptyDir: {}
      - name: tmp
        emptyDir: {}
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: reviews-v2
#   labels:
#     app: reviews
#     version: v2
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: reviews
#       version: v2
#   template:
#     metadata:
#       annotations:
#         sidecar.istio.io/inject: "true"
#       labels:
#         app: reviews
#         version: v2
#     spec:
#       securityContext:
#         # Do not use SeccompProfile if your project must work on
#         # old k8s versions < 1.19 and Openshift < 4.11
#         seccompProfile:
#           type: RuntimeDefault
#         runAsNonRoot: true
#       serviceAccountName: bookinfo-reviews
#       containers:
#         - name: reviews
#           image: quay.io/maistra/examples-bookinfo-reviews-v2:2.3.0
#           imagePullPolicy: IfNotPresent
#           env:
#             - name: LOG_DIR
#               value: "/tmp/logs"
#           ports:
#             - containerPort: 9080
#           volumeMounts:
#             - name: tmp
#               mountPath: /tmp
#             - name: wlp-output
#               mountPath: /opt/ibm/wlp/output
#           securityContext:
#             allowPrivilegeEscalation: false
#             capabilities:
#               drop:
#                 - ALL
#       volumes:
#         - name: wlp-output
#           emptyDir: {}
#         - name: tmp
#           emptyDir: {}
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: reviews-v3
#   labels:
#     app: reviews
#     version: v3
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: reviews
#       version: v3
#   template:
#     metadata:
#       annotations:
#         sidecar.istio.io/inject: "true"
#       labels:
#         app: reviews
#         version: v3
#     spec:
#       securityContext:
#         # Do not use SeccompProfile if your project must work on
#         # old k8s versions < 1.19 and Openshift < 4.11
#         seccompProfile:
#           type: RuntimeDefault
#         runAsNonRoot: true
#       serviceAccountName: bookinfo-reviews
#       containers:
#         - name: reviews
#           image: quay.io/maistra/examples-bookinfo-reviews-v3:2.3.0
#           imagePullPolicy: IfNotPresent
#           env:
#             - name: LOG_DIR
#               value: "/tmp/logs"
#           ports:
#             - containerPort: 9080
#           volumeMounts:
#             - name: tmp
#               mountPath: /tmp
#             - name: wlp-output
#               mountPath: /opt/ibm/wlp/output
#           securityContext:
#             allowPrivilegeEscalation: false
#             capabilities:
#               drop:
#                 - ALL
#       volumes:
#         - name: wlp-output
#           emptyDir: {}
#         - name: tmp
#           emptyDir: {}
