public-cloud.yaml
##################################################################################################
# Productpage services
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: productpage
  labels:
    app: productpage
    service: productpage
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: productpage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productpage-v1
  labels:
    app: productpage
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productpage
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: productpage
        version: v1
    spec:
      securityContext:
        # Do not use SeccompProfile if your project must work on
        # old k8s versions < 1.19 and Openshift < 4.11
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
      serviceAccountName: bookinfo-productpage
      containers:
      - name: productpage
        image: quay.io/maistra/examples-bookinfo-productpage-v1:2.3.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
      volumes:
      - name: tmp
        emptyDir: {}
---
##################################################################################################
# Ratings service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: ratings
  labels:
    app: ratings
    service: ratings
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: ratings
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings-v1
  labels:
    app: ratings
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratings
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: ratings
        version: v1
    spec:
      securityContext:
        # Do not use SeccompProfile if your project must work on
        # old k8s versions < 1.19 and Openshift < 4.11
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
      serviceAccountName: bookinfo-ratings
      containers:
      - name: ratings
        image: quay.io/maistra/examples-bookinfo-ratings-v1:2.3.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
---
